--- a/OpenGL2DTutorial.vcxproj.filters
+++ b/OpenGL2DTutorial.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="Src\Sprite.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Src\GamePad.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
