DDSファイル読み込みを実装.

--- a/OpenGL2DTutorial.vcxproj
+++ b/OpenGL2DTutorial.vcxproj
@@ -135,11 +135,15 @@
     <None Include="Res\Tutorial.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\DXGIFormat.h" />
     <ClInclude Include="Src\GamePad.h" />
     <ClInclude Include="Src\GLFWEW.h" />
     <ClInclude Include="Src\Shader.h" />
     <ClInclude Include="Src\Sprite.h" />
     <ClInclude Include="Src\Texture.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Res\Objects.dds" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
