--- a/OpenGL2DTutorial.vcxproj
+++ b/OpenGL2DTutorial.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Src\Main.cpp" />
     <ClCompile Include="Src\Node.cpp" />
     <ClCompile Include="Src\Scene.cpp" />
+    <ClCompile Include="Src\Scene\MainGame.cpp" />
     <ClCompile Include="Src\Scene\Title.cpp" />
     <ClCompile Include="Src\Shader.cpp" />
     <ClCompile Include="Src\Sprite.cpp" />
@@ -146,6 +147,7 @@
     <ClInclude Include="Src\GLFWEW.h" />
     <ClInclude Include="Src\Node.h" />
     <ClInclude Include="Src\Scene.h" />
+    <ClInclude Include="Src\Scene\MainGame.h" />
     <ClInclude Include="Src\Scene\Title.h" />
     <ClInclude Include="Src\Shader.h" />
     <ClInclude Include="Src\Sprite.h" />
